objects/Property_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Address__c</fullName>
        <label>Owner Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Photo__c</fullName>
        <label>Owner Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Property Owner</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Property Owner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>